# metavoice

./: .editorconfig  Dockerfile  app.py  docker-compose.yml  pyproject.toml  serving.py
fam/llm/: decoders.py  enhancers.py  fast_inference.py  fast_inference_utils.py  fast_model.py  fast_quantize.py  finetune.py  inference.py  model.py  utils.py
fam/llm/config/: finetune_params.py
fam/llm/layers/: attn.py
fam/llm/loaders/: training_data.py
fam/quantiser/audio/speaker_encoder/: model.py
fam/telemetry/: posthog.py
